@@ -601,7 +601,7 @@ class CoberturaParserTest extends AbstractParserTest {
                 coverage -> assertThat(coverage).hasCovered(4).hasMissed(0));
         assertThat(result).hasOnlyMetrics(MODULE, PACKAGE, FILE, CLASS, LINE, BRANCH, LOC, CYCLOMATIC_COMPLEXITY);
 
-        var fileNode = result.getAllFileNodes().get(0);
+        var fileNode = result.getAllFileNodes().getFirst();
         assertThat(fileNode.getLinesWithCoverage())
                 .containsExactly(6, 8, 9, 10, 11, 13, 16, 25, 41, 42, 46, 48, 49, 50, 54, 55, 56, 57, 60);
         assertThat(fileNode.getMissedCounters())
@@ -617,12 +617,12 @@ class CoberturaParserTest extends AbstractParserTest {
     @Issue("JENKINS-76221")
     void shouldMergeDuplicateLineNumbers() {
         var result = readReport("cobertura-duplicate-lines.xml");
-        
+
         assertThat(result.getAllFileNodes()).hasSize(1);
-        var fileNode = result.getAllFileNodes().get(0);
-        
+        var fileNode = result.getAllFileNodes().getFirst();
+
         assertThat(fileNode).hasName("foobar.cc").hasRelativePath("path/to/foobar.cc");
-        
+
         // Line 81: at least one entry has hits > 0 → covered
         assertThat(fileNode.getCoveredOfLine(81)).isEqualTo(1);
         assertThat(fileNode.getMissedOfLine(81)).isEqualTo(0);
@@ -634,7 +634,7 @@ class CoberturaParserTest extends AbstractParserTest {
         // Line 83: single line, covered
         assertThat(fileNode.getCoveredOfLine(83)).isEqualTo(1);
         assertThat(fileNode.getMissedOfLine(83)).isEqualTo(0);
-        
+
         // Line 84: all duplicates not covered → not covered
         assertThat(fileNode.getCoveredOfLine(84)).isEqualTo(0);
         assertThat(fileNode.getMissedOfLine(84)).isEqualTo(1);
@@ -654,20 +654,20 @@ class CoberturaParserTest extends AbstractParserTest {
         // Check overall LINE coverage for the class (should be based on merged values only)
         // Lines: 81 (covered), 82 (covered), 83 (covered), 84 (not covered), 85 (covered), 86 (covered), 87 (not covered)
         // Total: 5 covered, 2 missed = 7 total
-        var classNode = fileNode.getAll(CLASS).iterator().next();
+        var classNode = fileNode.getAll(CLASS).getFirst();
         assertThat(classNode.getValue(LINE))
                 .isPresent()
                 .get()
-                .isInstanceOfSatisfying(Coverage.class, 
+                .isInstanceOfSatisfying(Coverage.class,
                         coverage -> assertThat(coverage).hasCovered(5).hasMissed(2));
-        
+
         // Check overall BRANCH coverage for the class (should be based on merged values only)
         // Branches: 82 (2/4), 85 (1/2), 86 (3/4), 87 (0/4)
         // Total: 6 covered, 8 missed = 14 total
         assertThat(classNode.getValue(BRANCH))
                 .isPresent()
                 .get()
-                .isInstanceOfSatisfying(Coverage.class, 
+                .isInstanceOfSatisfying(Coverage.class,
                         coverage -> assertThat(coverage).hasCovered(6).hasMissed(8));
     }
 
